<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Registration"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/categoryGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"/>

            <RadioButton
                android:id="@+id/professional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professional"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workshops"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_development"/>

        <CheckBox
            android:id="@+id/ai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_ml"/>

        <CheckBox
            android:id="@+id/cyber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cybersecurity"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

    </LinearLayout>

</ScrollView>